--- a/_posts/2017-12-22-city-rush.md
+++ b/_posts/2017-12-22-city-rush.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-show-title: false
+show-title: true
 title: City Rush
 categories: photography
 tags: [iphone, iphone8plus, black and white, nyc]
